# motto-appraisal-service-privacy

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  release-please-config.json
.fleet/: ci-healthy.md
.github/workflows/: test.yml
docs/: README.md
src/: README.md
tests/: test_validation.py
