[project]
name = "motto-appraisal-service-privacy"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
